Added open in new window for social buttons

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             <div id="contacts">
             <footer>
                 <h2>If you need you can find me through Telegram, Github, Mail, or Instagram</h2>
-                <a href='https://t.me/mamiglia'><img src='tg.png'></a>
-                <a href='https://github.com/Mamiglia'><img src='github.png'></a>
-                <a href='mailto:mamiglia7@gmail.com'><img src='mail.png'></a>
-                <a href='https://www.instagram.com/mamiglia/'><img src='insta.png'></a>
+                <a href='https://t.me/mamiglia' target="_blank"><img src='tg.png'></a>
+                <a href='https://github.com/Mamiglia' target="_blank"><img src='github.png'></a>
+                <a href='mailto:mamiglia7@gmail.com' target="_blank"><img src='mail.png'></a>
+                <a href='https://www.instagram.com/mamiglia/' target="_blank"><img src='insta.png'></a>
             </footer></div>
         </div>
         <footer></footer>
