Fixed link in projects

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <h3>Reminder Bot</h3>
                     <p>This bot is able to remind you what you need, it's a real shame that i can't host it</p>
                     </card></a>
-                <a href='https://github.com/Mamiglia/PersonalSite'>
+                <a href='https://github.com/Mamiglia/mamiglia.github.io'>
                 <card class='site'>
                     <h2>this.</h2>
                     <h3>This Site</h3>
