--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a href='https://github.com/Mamiglia/Requester-Bot'><card class='req'>
                     <img src='r.jpg'>
                     <h3>Requester Bot</h3>
-                    <p>Builded with Botogram, as ny first project, this bot allow the users to communicate with the admins in order to do requests</p>
+                    <p>Builded with Botogram, as my first project, this bot allow the users to communicate with the admins in order to do requests</p>
                     </card></a>
                 <a href='https://github.com/Mamiglia/Reminder-Bot'><card class='rem'>
                     <img src='rem.jpg'>
