added "open in new page" for the projects part

--- a/index.html
+++ b/index.html
@@ -54,23 +54,22 @@
             </div>
             <div id="projects">
                 <h1>Projects</h1>
-                <a href='https://github.com/Mamiglia/Requester-Bot'><card class='req'>
+                <a href='https://github.com/Mamiglia/Requester-Bot' target="_blank"><card class='req'>
                     <img src='r.jpg'>
                     <h3>Requester Bot</h3>
                     <p>Builded with Botogram, as my first project, this bot allow the users to communicate with the admins in order to do requests</p>
                     </card></a>
-                <a href='https://github.com/Mamiglia/Reminder-Bot'><card class='rem'>
+                <a href='https://github.com/Mamiglia/Reminder-Bot' target="_blank"><card class='rem'>
                     <img src='rem.jpg'>
                     <h3>Reminder Bot</h3>
                     <p>This bot is able to remind you what you need, it's a real shame that i can't host it</p>
                     </card></a>
-                <a href='https://github.com/Mamiglia/mamiglia.github.io'>
-                <card class='site'>
+                <a href='https://github.com/Mamiglia/mamiglia.github.io' target="_blank"><card class='site'>
                     <h2>this.</h2>
                     <h3>This Site</h3>
                     <p>Yep, this is just an enourmous test</p>
                 </card></a>
-                <a href='https://github.com/Mamiglia'><card class='git'>
+                <a href='https://github.com/Mamiglia' target="_blank"><card class='git'>
                     <img src='git.png'>
                     <h3>Github Repo</h3>
                     <p>Discover more projects in my repository</p>
