--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
                 <h1 class='box pres'>Italian noob Developer and Cazzone</h1>
                 <h3 class='box x'>Magic Spells I Actually Know:</h3>
                 <card class='box python'>
-                    <img src='py.png'>
+                    <img src='data/images/py.png'>
                     <h3><br>Python</h3>
                     <p>The first language I ever learned, thanks to an year of practice it's my strenghter point</p>
                 </card>
                 <card class='box bots'>
-                    <img src='telegram.png'>
+                    <img src='data/images/telegram.png'>
                     <h3><br>Telegram Bots</h3>
                     <p>Thanks to Botogram APIs I'm perfectly able to write every type of Bot for Telegram</p>
                 </card>
                 <card class='box frontend'>
-                    <img src='html-css.png'>
+                    <img src='data/images/html-css.png'>
                     <h3><br>CSS & HTML</h3>
                     <p>Newbie with the Front-End Developing, this is the first site I ever created, thanks codecademy</p>
                 </card>
@@ -55,12 +55,12 @@
             <div id="projects">
                 <h1>Projects</h1>
                 <a href='https://github.com/Mamiglia/Requester-Bot' target="_blank"><card class='req'>
-                    <img src='r.jpg'>
+                    <img src='data/images/requester-bot.jpg'>
                     <h3>Requester Bot</h3>
                     <p>Builded with Botogram, as my first project, this bot allow the users to communicate with the admins in order to do requests</p>
                     </card></a>
                 <a href='https://github.com/Mamiglia/Reminder-Bot' target="_blank"><card class='rem'>
-                    <img src='rem.jpg'>
+                    <img src='data/images/reminder-bot.jpg'>
                     <h3>Reminder Bot</h3>
                     <p>This bot is able to remind you what you need, it's a real shame that i can't host it</p>
                     </card></a>
@@ -70,7 +70,7 @@
                     <p>Yep, this is just an enourmous test</p>
                 </card></a>
                 <a href='https://github.com/Mamiglia' target="_blank"><card class='git'>
-                    <img src='git.png'>
+                    <img src='data/images/github.png'>
                     <h3>Github Repo</h3>
                     <p>Discover more projects in my repository</p>
                 </card></a>
@@ -78,10 +78,10 @@
             <div id="contacts">
             <footer>
                 <h2>If you need you can find me through Telegram, Github, Mail, or Instagram</h2>
-                <a href='https://t.me/mamiglia' target="_blank"><img src='tg.png'></a>
-                <a href='https://github.com/Mamiglia' target="_blank"><img src='github.png'></a>
-                <a href='mailto:mamiglia7@gmail.com' target="_blank"><img src='mail.png'></a>
-                <a href='https://www.instagram.com/mamiglia/' target="_blank"><img src='insta.png'></a>
+                <a href='https://t.me/mamiglia' target="_blank"><img src='data/images/telegram-contacts.png'></a>
+                <a href='https://github.com/Mamiglia' target="_blank"><img src='data/images/github-contacts.png'></a>
+                <a href='mailto:mamiglia7@gmail.com' target="_blank"><img src='data/images/mail-contacts.png'></a>
+                <a href='https://www.instagram.com/mamiglia/' target="_blank"><img src='data/images/instagram-contacts.png'></a>
             </footer></div>
         </div>
         <footer></footer>
