--- a/index.html
+++ b/index.html
@@ -38,42 +38,46 @@
             <div class='learning'>
                 <h1>Actually Learning:</h1>
                 <h2 class='fcurly'>{</h2>
-                <card class='rs'>
-                    <h3>RS</h3>
-                    <p>Responsive Design requires some studies </p>
-                </card>
-                <card class='js'>
-                    <h3>JS</h3>
-                    <p>As you can see this page has no animations at all</p>
-                </card>
-                <card class='go'>
-                    <h3>Go</h3>
-                    <p>It's on the TODO list, just for the hamster</p>
-                </card>
+                <div class='learn'>
+                    <card class='rs'>
+                        <h3>RS</h3>
+                        <p>Responsive Design requires some studies </p>
+                    </card>
+                    <card class='js'>
+                        <h3>JS</h3>
+                        <p>As you can see this page has no animations at all</p>
+                    </card>
+                    <card class='go'>
+                        <h3>Go</h3>
+                        <p>It's on the TODO list, just for the hamster mascot</p>
+                    </card>
+                </div>
                 <h2 class='scurly'>}</h2>  
             </div>
             <div id="projects">
                 <h1>Projects</h1>
-                <a href='https://github.com/Mamiglia/Requester-Bot' target="_blank"><card class='req'>
-                    <img src='data/images/requester-bot.jpg'>
-                    <h3>Requester Bot</h3>
-                    <p>Builded with Botogram, as my first project, this bot allow the users to communicate with the admins in order to do requests</p>
+                <div class="pros">
+                    <a href='https://github.com/Mamiglia/Requester-Bot' target="_blank"><card class='req'>
+                        <img src='data/images/requester-bot.jpg'>
+                        <h3>Requester Bot</h3>
+                        <p>Builded with Botogram, as my first project, this bot allow the users to communicate with the admins in order to do requests</p>
                     </card></a>
-                <a href='https://github.com/Mamiglia/Reminder-Bot' target="_blank"><card class='rem'>
-                    <img src='data/images/reminder-bot.jpg'>
-                    <h3>Reminder Bot</h3>
-                    <p>This bot is able to remind you what you need, it's a real shame that i can't host it</p>
+                    <a href='https://github.com/Mamiglia/Reminder-Bot' target="_blank"><card class='rem'>
+                        <img src='data/images/reminder-bot.jpg'>
+                        <h3>Reminder Bot</h3>
+                        <p>This bot is able to remind you what you need, it's a real shame that i can't host it</p>
                     </card></a>
-                <a href='https://github.com/Mamiglia/mamiglia.github.io' target="_blank"><card class='site'>
-                    <h2>this.</h2>
-                    <h3>This Site</h3>
-                    <p>Yep, this is just an enourmous test</p>
-                </card></a>
-                <a href='https://github.com/Mamiglia' target="_blank"><card class='git'>
-                    <img src='data/images/github.png'>
-                    <h3>Github Repo</h3>
-                    <p>Discover more projects in my repository</p>
-                </card></a>
+                    <a href='https://github.com/Mamiglia/mamiglia.github.io' target="_blank"><card class='site'>
+                        <h2>this.</h2>
+                        <h3>This Site</h3>
+                        <p>Yep, this is just an enourmous test</p>
+                    </card></a>
+                    <a href='https://github.com/Mamiglia' target="_blank"><card class='git'>
+                        <img src='data/images/github.png'>
+                        <h3>Github Repo</h3>
+                        <p>Discover more projects in my repository</p>
+                    </card></a>
+                </div>
             </div>
             <div id="contacts">
             <footer>
