Added a paragraph at the end of the page, changed some classes

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
                 <h1>Actually Learning:</h1>
                 <h2 class='fcurly'>{</h2>
                 <div class='learn'>
-                    <card class='rs'>
-                        <h3>RS</h3>
+                    <card>
+                        <h3 class='rs'>RS</h3>
                         <p>Responsive Design requires some studies </p>
                     </card>
-                    <card class='js'>
-                        <h3>JS</h3>
+                    <card>
+                        <h3 class='js'>JS</h3>
                         <p>As you can see this page has no animations at all</p>
                     </card>
-                    <card class='go'>
-                        <h3>Go</h3>
+                    <card>
+                        <h3 class='go'>Go</h3>
                         <p>It's on the TODO list, just for the hamster mascot</p>
                     </card>
                 </div>
@@ -56,7 +56,7 @@
             </div>
             <div id="projects">
                 <h1>Projects</h1>
-                <div class="pros">
+                <div class="proj">
                     <a href='https://github.com/Mamiglia/Requester-Bot' target="_blank"><card class='req'>
                         <img src='data/images/requester-bot.jpg'>
                         <h3>Requester Bot</h3>
@@ -86,8 +86,9 @@
                 <a href='https://github.com/Mamiglia' target="_blank"><img src='data/images/github-contacts.png'></a>
                 <a href='mailto:mamiglia7@gmail.com' target="_blank"><img src='data/images/mail-contacts.png'></a>
                 <a href='https://www.instagram.com/mamiglia/' target="_blank"><img src='data/images/instagram-contacts.png'></a>
-            </footer></div>
+            </footer>
+            </div>
+            <p class='sign'>Apache License 2018, Matteo Migliarini</p>
         </div>
-        <footer></footer>
     </body>
 </html>
