trying to understand how responsive design works

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Mamiglia</title>
         <link rel="stylesheet" type="text/css" href="theme.css">
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     </head>
     <body>
