Created a div 'Spells' to render it in flex

--- a/index.html
+++ b/index.html
@@ -19,22 +19,24 @@
             </div>
             <div id='Who'>
                 <h1 class='box pres'>Italian noob Developer and Cazzone</h1>
-                <h3 class='box x'>Magic Spells I Actually Know:</h3>
-                <card class='box python'>
-                    <img src='data/images/py.png'>
-                    <h3><br>Python</h3>
-                    <p>The first language I ever learned, thanks to an year of practice it's my strenghter point</p>
-                </card>
-                <card class='box bots'>
-                    <img src='data/images/telegram.png'>
-                    <h3><br>Telegram Bots</h3>
-                    <p>Thanks to Botogram APIs I'm perfectly able to write every type of Bot for Telegram</p>
-                </card>
-                <card class='box frontend'>
-                    <img src='data/images/html-css.png'>
-                    <h3><br>CSS & HTML</h3>
-                    <p>Newbie with the Front-End Developing, this is the first site I ever created, thanks codecademy</p>
-                </card>
+                <h2 class='box x'>Magic Spells I Actually Know:</h3>
+                <div class='spells'>
+                    <card class='box python'>
+                        <img src='data/images/py.png'>
+                        <h3><br>Python</h3>
+                        <p>The first language I ever learned, thanks to an year of practice it's my strenghter point</p>
+                    </card>
+                    <card class='box bots'>
+                        <img src='data/images/telegram.png'>
+                        <h3><br>Telegram Bots</h3>
+                        <p>Thanks to Botogram APIs I'm perfectly able to write every type of Bot for Telegram</p>
+                    </card>
+                    <card class='box frontend'>
+                        <img src='data/images/html-css.png'>
+                        <h3><br>CSS & HTML</h3>
+                        <p>Newbie with the Front-End Developing, this is the first site I ever created, thanks codecademy</p>
+                    </card>
+                </div>
             </div>
             <div class='learning'>
                 <h1>Actually Learning:</h1>
@@ -89,7 +91,7 @@
                 <a href='https://www.instagram.com/mamiglia/' target="_blank"><img src='data/images/instagram-contacts.png'></a>
             </footer>
             </div>
-            <p class='sign'>Apache License 2018, Matteo Migliarini<br>Last update: 21/07 16:46</p>
+            <p class='sign'>Apache License 2018, Matteo Migliarini<br>Last update: 21/07 18:31</p>
         </div>
     </body>
 </html>
