Code cleaned, removed a lot of old and obsolete classes

--- a/index.html
+++ b/index.html
@@ -13,73 +13,70 @@
             <h3><a href='#projects'>Projects</a></h3>
             <h3><a href='#contacts'>Contacts</a></h3>
         </div>
-        
-         <div id="intro">
-            <h1>Learning to improve</h1>
-        </div>
+        <h1 class='intro'>Learning to improve</h1>
         <div id='Who'>
-            <h1 class='box pres'>Italian noob Developer and Cazzone</h1>
-            <h2 class='box x'>Magic Spells I Actually Know:</h3>
+            <h1>Italian noob Developer and Cazzone</h1>
+            <h2>Magic Spells I Actually Know:</h3>
             <div class='spells'>
-                <card class='box python'>
+                <div class='box'>
                     <img src='data/images/py.png'>
                     <h3><br>Python</h3>
                     <p>The first language I ever learned, thanks to an year of practice it's my strenghter point</p>
-                </card>
-                <card class='box bots'>
+                </div>
+                <div class='box'>
                     <img src='data/images/telegram.png'>
                     <h3><br>Telegram Bots</h3>
                     <p>Thanks to Botogram APIs I'm perfectly able to write every type of Bot for Telegram</p>
-                </card>
-                <card class='box frontend'>
+                </div>
+                <div class='box'>
                     <img src='data/images/html-css.png'>
                     <h3><br>CSS & HTML</h3>
                     <p>Newbie with the Front-End Developing, this is the first site I ever created, thanks codecademy</p>
-                </card>
+                </div>
             </div>
         </div>
         <div class='learning'>
             <h1>Actually Learning:</h1>
-            <h2 class='fcurly'>{</h2>
+            <h2>{</h2>
             <div class='learn'>
-                <card>
+                <div class='box'>
                     <h3 class='rs'>RS</h3>
                     <p>Responsive Design requires some studies </p>
-                </card>
-                <card>
+                </div>
+                <div class='box'>
                     <h3 class='js'>JS</h3>
                     <p>As you can see this page has no animations at all</p>
-                </card>
-                <card>
+                </div>
+                <div class='box'>
                     <h3 class='go'>Go</h3>
                     <p>It's on the TODO list, just for the hamster mascot</p>
-                </card>
                 </div>
-            <h2 class='scurly'>}</h2>  
+                </div>
+            <h2>}</h2>  
         </div>
         <div id="projects">
             <h1>Projects</h1>
             <div class="proj">
-                <a href='https://github.com/Mamiglia/Requester-Bot' target="_blank"><card class='req'>
+                <a href='https://github.com/Mamiglia/Requester-Bot' target="_blank"><div class='card'>
                     <img src='data/images/requester-bot.jpg'>
                     <h3>Requester Bot</h3>
                     <p>Builded with Botogram, as my first project, this bot allow the users to communicate with the admins in order to do requests</p>
-                </card></a>
-                <a href='https://github.com/Mamiglia/Reminder-Bot' target="_blank"><card class='rem'>
+                </div></a>
+                <a href='https://github.com/Mamiglia/Reminder-Bot' target="_blank"><div class='card'>
                     <img src='data/images/reminder-bot.jpg'>
                     <h3>Reminder Bot</h3>
                     <p>This bot is able to remind you what you need, it's a real shame that i can't host it</p>
-                </card></a>
-                <a href='https://github.com/Mamiglia/mamiglia.github.io' target="_blank"><card class='site'>
-                    <h2>this.</h2>
+                </div></a>
+                <a href='https://github.com/Mamiglia/mamiglia.github.io' target="_blank"><div class='card'>
+                    <h2 class='fakeImg'>this.</h2>
                     <h3>This Site</h3>
                     <p>Yep, this is just an enourmous test</p>
-                </card></a>
-                <a href='https://github.com/Mamiglia' target="_blank"><card class='git'>
+                </div></a>
+                <a href='https://github.com/Mamiglia' target="_blank"><div class='card'>
                     <img src='data/images/github.png'>
                     <h3>Github Repo</h3>
                     <p>Discover more projects in my repository</p>
-                </card></a>
+                </div></a>
             </div>
         </div>
         <div id="contacts">
