--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link rel='stylesheet' href='data/otherswork/animate.min.css'>
+        <script src="data/otherswork/wow.min.js"></script>
+        <script>
+            new WOW().init();
+        </script>
     </head>
     <body>
         <div class="header">
@@ -13,11 +18,11 @@
             <h3><a href='#projects'>Projects</a></h3>
             <h3><a href='#contacts'>Contacts</a></h3>
         </div>
-        <h1 class='intro'>Learning to improve</h1>
+        <h1 class='intro fadeInDown animated'>Learning to improve</h1>
         <div id='Who'>
             <h1>Italian noob Developer and Cazzone</h1>
             <h2>Magic Spells I Actually Know:</h3>
-            <div class='spells'>
+            <div class='spells fadeInDown animated wow' data-wow-offset='2'>
                 <div class='box'>
                     <img src='data/images/py.png'>
                     <h3><br>Python</h3>
@@ -38,7 +43,7 @@
         <div class='learning'>
             <h1>Actually Learning:</h1>
             <h2>{</h2>
-            <div class='learn'>
+            <div class='learn fadeInDown animated wow' data-wow-offset='0'>
                 <div class='box'>
                     <h3 class='rs'>RS</h3>
                     <p>Responsive Design requires some studies </p>
@@ -57,22 +62,22 @@
         <div id="projects">
             <h1>Projects</h1>
             <div class="proj">
-                <a href='https://github.com/Mamiglia/Requester-Bot' target="_blank"><div class='card'>
+                <a href='https://github.com/Mamiglia/Requester-Bot' target="_blank"><div class='card wow fadeInLeft animated' data-wow-offset='1'>
                     <img src='data/images/requester-bot.jpg'>
                     <h3>Requester Bot</h3>
                     <p>Builded with Botogram, as my first project, this bot allow the users to communicate with the admins in order to do requests</p>
                 </div></a>
-                <a href='https://github.com/Mamiglia/Reminder-Bot' target="_blank"><div class='card'>
+                <a href='https://github.com/Mamiglia/Reminder-Bot' target="_blank"><div class='card wow fadeInRight animated' data-wow-offset='1'>
                     <img src='data/images/reminder-bot.jpg'>
                     <h3>Reminder Bot</h3>
                     <p>This bot is able to remind you what you need, it's a real shame that i can't host it</p>
                 </div></a>
-                <a href='https://github.com/Mamiglia/mamiglia.github.io' target="_blank"><div class='card'>
+                <a href='https://github.com/Mamiglia/mamiglia.github.io' target="_blank"><div class='card wow fadeInLeft animated' data-wow-offset='1'>
                     <h2 class='fakeImg'>this.</h2>
                     <h3>This Site</h3>
                     <p>Yep, this is just an enourmous test</p>
                 </div></a>
-                <a href='https://github.com/Mamiglia' target="_blank"><div class='card'>
+                <a href='https://github.com/Mamiglia' target="_blank"><div class='card wow fadeInRight animated' data-wow-offset='1'>
                     <img src='data/images/github.png'>
                     <h3>Github Repo</h3>
                     <p>Discover more projects in my repository</p>
