--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h3><a href='#projects'>Projects</a></h3>
             <h3><a href='#contacts'>Contacts</a></h3>
         </div>
-        <h1 class='intro fadeInDown animated'>Learning to improve</h1>
+        <h1 class='intro fadeInDownSmooth animated'>Learning to improve</h1>
         <div id='Who'>
             <h1>Italian noob Developer and Cazzone</h1>
             <h2>Magic Spells I Actually Know:</h3>
@@ -67,7 +67,7 @@
                     <h3>Requester Bot</h3>
                     <p>Builded with Botogram, as my first project, this bot allow the users to communicate with the admins in order to do requests</p>
                 </div></a>
-                <a href='https://github.com/Mamiglia/Reminder-Bot' target="_blank"><div class='card wow fadeInRight animated' data-wow-offset='1'>
+                <a href='https://github.com/Mamiglia/Reminder-Bot' target="_blank"><div class='card wow fadeInLeft animated' data-wow-offset='1'>
                     <img src='data/images/reminder-bot.jpg'>
                     <h3>Reminder Bot</h3>
                     <p>This bot is able to remind you what you need, it's a real shame that i can't host it</p>
@@ -77,7 +77,7 @@
                     <h3>This Site</h3>
                     <p>Yep, this is just an enourmous test</p>
                 </div></a>
-                <a href='https://github.com/Mamiglia' target="_blank"><div class='card wow fadeInRight animated' data-wow-offset='1'>
+                <a href='https://github.com/Mamiglia' target="_blank"><div class='card wow fadeInLeft animated' data-wow-offset='1'>
                     <img src='data/images/github.png'>
                     <h3>Github Repo</h3>
                     <p>Discover more projects in my repository</p>
