Added bounce animation at the bottom

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id='Who'>
             <h1>Italian noob Developer and Cazzone</h1>
             <h2>Magic Spells I Actually Know:</h3>
-            <div class='spells fadeInDown animated wow' data-wow-offset='2'>
+            <div class='spells fadeInDown animated wow' data-wow-offset='20'>
                 <div class='box'>
                     <img src='data/images/py.png'>
                     <h3><br>Python</h3>
@@ -43,7 +43,7 @@
         <div class='learning'>
             <h1>Actually Learning:</h1>
             <h2>{</h2>
-            <div class='learn fadeInDown animated wow' data-wow-offset='0'>
+            <div class='learn fadeInDown animated wow' data-wow-offset='20'>
                 <div class='box'>
                     <h3 class='rs'>RS</h3>
                     <p>Responsive Design requires some studies </p>
@@ -57,7 +57,7 @@
                     <p>It's on the TODO list, just for the hamster mascot</p>
                 </div>
                 </div>
-            <h2>}</h2>  
+            <h2>}</h2>
         </div>
         <div id="projects">
             <h1>Projects</h1>
@@ -87,10 +87,12 @@
         <div id="contacts">
            <footer>
                 <h2>If you need you can find me through Telegram, Github, Mail, or Instagram</h2>
-                <a href='https://t.me/mamiglia' target="_blank"><img src='data/images/telegram-contacts.png'></a>
-                <a href='https://github.com/Mamiglia' target="_blank"><img src='data/images/github-contacts.png'></a>
-                <a href='mailto:mamiglia7@gmail.com' target="_blank"><img src='data/images/mail-contacts.png'></a>
-                <a href='https://www.instagram.com/mamiglia/' target="_blank"><img src='data/images/instagram-contacts.png'></a>
+                <div class="bounce animated wow" data-wow-delay="2s">
+                  <a href='https://t.me/mamiglia' target="_blank"><img src='data/images/telegram-contacts.png'></a>
+                  <a href='https://github.com/Mamiglia' target="_blank"><img src='data/images/github-contacts.png'></a>
+                  <a href='mailto:mamiglia7@gmail.com' target="_blank"><img src='data/images/mail-contacts.png'></a>
+                  <a href='https://www.instagram.com/mamiglia/' target="_blank"><img src='data/images/instagram-contacts.png'></a>
+                </div>
             </footer>
         </div>
         <p class='sign'>Apache License 2018, Matteo Migliarini<br>Last update: 21/07 18:50</p>
