--- a/index.html
+++ b/index.html
@@ -95,6 +95,6 @@
                 </div>
             </footer>
         </div>
-        <p class='sign'>Apache License 2018, Matteo Migliarini<br>Last update: 21/07 18:50</p>
+        <p class='sign'>Apache License 2018, Matteo Migliarini<br>Last update: 03/08/18 13:00</p>
     </body>
 </html>
