link for the new project

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         </div>
         <div id="contacts">
            <footer>
+                <h2><a href="School-Site-Sample/index.html">Check out my new project!</a></h2>
                 <h2>If you need you can find me through Telegram, Github, Mail, or Instagram</h2>
                 <div class="bounce animated wow" data-wow-delay="2s">
                   <a href='https://t.me/mamiglia' target="_blank"><img src='data/images/telegram-contacts.png'></a>
