--- a/index.html
+++ b/index.html
@@ -2,17 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/dist/assets/favicon.a5897250.ico" />
+    <link rel="icon" href="/src/assets/images/favicon.ico" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mamiglia</title>
-    <script type="module" crossorigin src="/dist/assets/index.994dc8f8.js"></script>
-    <link rel="stylesheet" href="/dist/assets/index.9d0b1bcb.css">
   </head>
   <body>
     <div id="app"></div>
     
-    
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
